--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,6 +1,9 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+
+    // use https://github.com/acmerobotics/ftc-dashboard
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -13,5 +16,10 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    // use https://github.com/acmerobotics/ftc-dashboard
+    implementation('com.acmerobotics.dashboard:dashboard:0.4.16') {
+        exclude group: 'org.firstinspires.ftc'
+    }
 }
 
